# DIPLOMADO-SQL-Y-PYTHON

./: Readme.MD  pyproject.toml
Cuadernos/: Ejercicio_1.ipynb  Modelos_dimensionales.ipynb  SQL_Class.ipynb  tabla_secuestros
Código/: Primer_cuaderno.ipynb
Datos/: empresa.db
